# cabalSkeleton.g8

./: .gitignore  README.md  project.cabal
main/: Main.hs
src/main/g8/: $name__camel$.cabal  $name__norm$.cabal  .gitignore  README.md  Setup.hs  default.properties  generate-documentation.sh
src/main/g8/benchmarks/: Main.hs
src/main/g8/doctests/: Main.hs
src/main/g8/etc/: LICENCE.md
src/main/g8/hlint/: Main.hs
src/main/g8/liquid/: Main.hs
src/main/g8/main/: Main.hs
src/main/g8/quickcheck/: Main.hs
