name:               project
version:            0.0.1
license:            MIT
license-file:       etc/LICENCE
author:             name
maintainer:         nme
copyright:          Copyright (C) 2010-2013 
synopsis:           Template for a cabal project
category:           Eduction
description:        Template for a cabal project
homepage:           https://github.com/domdere/cabalSkeleton
bug-reports:        https://github.com/domdere/cabalSkeleton
cabal-version:      >= 1.10
build-type:         Custom
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           git@github.com:domdere/cabalSkeleton.git

flag                    small_base
    description:        Choose the new, split-up base package.

library 
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                        , HUnit
                        , containers
                        , array

    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults

    hs-source-dirs:     src

    exposed-modules:    

executable              executableName
    default-language:   Haskell2010
    -- .hs or .lhs file containing the Main module.
    hs-source-dirs:     main
    main-is:            Main.hs            
 
    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults
                        -- -i.:..  
                        -optl-Wl,-rpath,$ORIGIN 
    --extra-libraries: 
    --extra-lib-dirs: 
    -- Modules included in this executable, other than Main.
    -- other-modules:       
  
    -- Other library packages from which modules are imported.
    build-depends:      base < 5 && >= 4

test-suite              doctests
    type:
                        exitcode-stdio-1.0

    main-is:
                        Main.hs

    default-language:
                        Haskell2010

    build-depends:
                        base < 5 && >= 3,
                        doctest >= 0.9.7,
                        filepath >= 1.3,
                        directory >= 1.1,
                        QuickCheck >= 2.0

    ghc-options:
                        -Wall
                        -threaded

    hs-source-dirs:
                        doctests
