name:               $name;format="norm"$
version:            0.0.1
license:            $license_type$
license-file:       etc/LICENCE.md
author:             $author_name$
maintainer:         $maintainer$
copyright:          Copyright (C) 2014
synopsis:           $synopsis$
category:           $category$
description:        $cabal_description$
homepage:           $homepage$
bug-reports:        $homepage$
cabal-version:      >= $cabal_version$
build-type:         Custom
--extra-source-files: etc/CONTRIBUTORS,
--                    etc/CREDITS

source-repository       head
    type:               git
    location:           $gitrepo_location$

flag                    small_base
    description:        Choose the new, split-up base package.

library
    default-language:   Haskell2010

    build-depends:      base < 5 && >= 4
                    ,   containers
                    ,   array

    ghc-options:        -Wall

    hs-source-dirs:     src

    exposed-modules:

executable              $executable_name$
    default-language:   Haskell2010
    -- .hs or .lhs file containing the Main module.
    hs-source-dirs:     main

    main-is:            Main.hs

    ghc-options:        -Wall

    --extra-libraries:
    --extra-lib-dirs:
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- Other library packages from which modules are imported.
    build-depends:      base < 5 && >= 4
                    ,   optparse-applicative        == 0.11.0.1
                    ,   $name;format="norm"$

test-suite              doctests
    type:
                        exitcode-stdio-1.0

    main-is:
                        Main.hs

    default-language:
                        Haskell2010

    build-depends:
                        base                >= 4 && < 5
                    ,   doctest             >= 0.9.11
                    ,   filepath            >= 1.3
                    ,   directory           >= 1.1
                    ,   QuickCheck          >= 2.0
                    ,   template-haskell    == 2.9.*

    ghc-options:
                        -Wall
                        -threaded

    hs-source-dirs:
                        doctests

test-suite              quickcheck
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     quickcheck
    build-depends:      base                >= 4 && < 5
                    ,   QuickCheck          == 2.8.*
                    ,   $name;format="norm"$


test-suite              hlint
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    main-is:            Main.hs
    hs-source-dirs:     hlint
    build-depends:      base
                    ,   hlint               == 1.9.*

benchmark               benchmarks
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    hs-source-dirs:     benchmarks
    main-is:            Main.hs
    ghc-options:        -O2 -rtsopts

    build-depends:      base > 4 && <= 5
                    ,   $name;format="norm"$
                    ,   criterion >= 0.8
